[gd_scene load_steps=8 format=3 uid="uid://d25js0wc8rmp2"]

[ext_resource type="Script" uid="uid://bycy4rycmamfg" path="res://scripts/powerup.gd" id="1_macmd"]
[ext_resource type="Texture2D" uid="uid://bvn128gqarltp" path="res://sprites/vfx/glow.svg" id="2_ruyic"]
[ext_resource type="Texture2D" uid="uid://kgn3kuc2mgoj" path="res://sprites/placeholder.svg" id="3_ifdct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icg8g"]
size = Vector2(52, 52)

[sub_resource type="Animation" id="Animation_fabp5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.125, 0.125)]
}

[sub_resource type="Animation" id="Animation_3w2pm"]
resource_name = "pulse"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.659754, 1),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1y3bv"]
_data = {
&"RESET": SubResource("Animation_fabp5"),
&"pulse": SubResource("Animation_3w2pm")
}

[node name="powerup" type="Area2D" node_paths=PackedStringArray("glowSprite", "animPlayer")]
script = ExtResource("1_macmd")
glowSprite = NodePath("glowSprite")
animPlayer = NodePath("AnimationPlayer")
myScenePath = "res://powerup.tscn"

[node name="glowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.7, 0.7, 1)
scale = Vector2(0.227758, 0.227758)
texture = ExtResource("2_ruyic")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_ifdct")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_icg8g")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(6.5, 6.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1y3bv")
}

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
